# pyproject.toml

[tool.poetry]
name = "Hamkeygen kalip bot"
version = "0.1.0"
description = "A Telegram bot for key generation"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
python-telegram-bot = "^20.0"
httpx = "^0.24.1"
loguru = "^0.7.0"
python-dotenv = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
