[tool.poetry]
name = "Hamkeygen kalip bot"
version = "0.1.0"
description = ""
authors = ["bro <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
httpx = "^0.24.0"
loguru = "^0.6.0"

[tool.poetry.dev-dependencies]
pytest = "^7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
